v0.6.5/_sources/index.rst
# DP-EVA Documentation

**Deep Potential EVolution Accelerator (DP-EVA)** is an active learning framework designed for efficient fine-tuning of DPA universal machine learning interatomic potential.

.. toctree::
   :maxdepth: 2
   :caption: Getting Started

   guides/installation
   guides/quickstart
   guides/cli
   guides/configuration

.. toctree::
   :maxdepth: 2
   :caption: User Guides

   guides/slurm
   guides/troubleshooting

.. toctree::
   :maxdepth: 2
   :caption: Reference

   reference/index

.. toctree::
   :maxdepth: 2
   :caption: Developer Guide

   guides/developer-guide
   architecture/README
   api/index

.. toctree::
   :maxdepth: 1
   :caption: Governance

   guides/docs-governance-quickstart
   guides/process-asset-lifecycle
   policy/README
   plans/governance/index

.. toctree::
   :maxdepth: 1
   :hidden:

   architecture/design-report
   architecture/decisions/README
   architecture/decisions/2026-02-04-deepmd-dependency
   guides/README
   guides/deployment
   guides/developer/README
   guides/developer/config-docs-maintenance
   guides/testing/README
   guides/testing/integration-config-templates
   guides/testing/integration-slurm
   guides/testing/multi-datapool-artifacts
   plans/README
   policy/contributing
   policy/docs-structure
   policy/maintenance
   policy/quality
