v0.8.1/_sources/index.rst
# DP-EVA Documentation

**Deep Potential EVolution Accelerator (DP-EVA)** is an active learning framework designed for efficient fine-tuning of DPA universal machine learning interatomic potential.

Citation
--------

If you use DP-EVA, please cite the project article: `DP-EVA in Clean Energy <https://doi.org/10.1093/ce/zkag029>`__.

.. toctree::
   :maxdepth: 2
   :caption: Getting Started

   guides/installation
   guides/quickstart
   guides/cli
   guides/configuration

.. toctree::
   :maxdepth: 2
   :caption: User Guides

   guides/slurm
   guides/troubleshooting

.. toctree::
   :maxdepth: 2
   :caption: Reference

   reference/index

.. toctree::
   :maxdepth: 2
   :caption: Developer Guide

   guides/developer-guide
   architecture/README
   api/index

.. toctree::
   :maxdepth: 1
   :caption: Governance

   guides/docs-governance-quickstart
   guides/process-asset-lifecycle
   policy/README

项目级审查与实验报告保留在仓库 ``docs/reports/`` 目录中，作为可复盘资产按需访问，不纳入主导航的稳定入口。

.. toctree::
   :maxdepth: 1
   :hidden:

   architecture/design-report
   architecture/decisions/README
   architecture/decisions/2026-02-04-deepmd-dependency
   guides/README
   guides/deployment
   guides/labeling-stats-repair
   guides/developer/README
   guides/developer/config-docs-maintenance
   guides/developer/deepmd-kit-sai-build
   guides/testing/README
   guides/testing/integration-config-templates
   guides/testing/integration-slurm
   guides/testing/multi-datapool-artifacts
   policy/contributing
   policy/docs-structure
   policy/maintenance
   policy/quality
